fix article subtitles for dark mode

--- a/css/articles.css
+++ b/css/articles.css
@@ -421,4 +421,8 @@ body.dark-mode .big-title {
   color: #eee;
 }
 
+body.dark-mode .article-subtitle {
+  color: #eee;
+}
+
 
